# ctsimu-toolbox

./: .gitignore  MANIFEST.in  README.md  build.sh  build_html.sh  build_pdf.sh  pyproject.toml  setup.py  test_primitives.py  test_scenario.py
ctsimu/: __init__.py  documentation.md  geometry.md  geometry.py  helpers.py  image.py  primitives.py  report.py  test.py  tiffy.py  toolbox.md  toolbox.py  version.py
ctsimu/ctsimu_evaluations/: test2D_DW_1.py  test2D_FB_1.py  test2D_FB_2.py  test2D_HS_1.py  test2D_SW_1.py  test2D_SW_2.py  test2D_SW_3.py  test2D_SW_4.py  test2D_WE_1.py  test2D_WE_2.py
ctsimu/evaluation/: __init__.py  test2D_DW_1.md  test2D_DW_1.py  test2D_FB_1.md  test2D_FB_1.py  test2D_FB_2.md  test2D_FB_2.py  test2D_HS_1.md  test2D_HS_1.py  test2D_SW_1.md  test2D_SW_1.py  test2D_SW_2.md  test2D_SW_2.py  test2D_SW_3.md  test2D_SW_3.py  test2D_SW_4.md  test2D_SW_4.py  test2D_WE_1.md  test2D_WE_1.py  test2D_WE_2.md  test2D_WE_2.py  testDigTwin.py  testTwin.md  testTwin.py
ctsimu/image_analysis/: isrb.py  mtf.py
ctsimu/processing/: __init__.py  binning.py  documentation.md  flat_field.py  median.py  noise.py  pipeline.py  smoothing.py  step.py  transform.py
ctsimu/responses/: __init__.py  groups.py  measurands.py  run.py
ctsimu/scenario/: __init__.py  acquisition.py  detector.py  deviation.py  documentation.md  drift.py  environment.py  file.py  filter.py  group.py  material.py  (+8 more)
docs/: geometry.html  helpers.html  image.html  index.html  primitives.html  report.html  test.html  tiffy.html  toolbox.html  version.html
source/: README.md  setup.py
(+173 files in other folders)
