[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ctsimu"
version = "1.6.1"
authors = [
  { name="David Plotzki", email="davidplotzki@gmail.com" },
]
description = "CTSimU Software Toolbox"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion"
]

[project.urls]
"Homepage" = "https://github.com/BAMresearch/ctsimu-toolbox/"
